@@ -1,4 +1,5 @@
 v0.11
+	* ADD : Style tag selector by type (e.g "Type is TrackPoint") and presence of tags (e.g. "HasTags"). Allows: 1) To show a generic icon for POI; 2) To display an icon for "lost" points with no roads nor tags.
 	* ADD : clipboard-copy-paste support (Tags only for now). Clipboard format is xml OSM.
 	* ADD : "export selected to OSM"
 	* ADD : Proxy support to SlippyMapWidget + change the kind of download only when interacting with the slippy map
